<resources>

    <string name="app_name">Calc</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MyCalc</string>
    <string name="FirstNumber">First Number</string>
    <string name="toDo">&amp;</string>
    <string name="SecondNumber">Second Number</string>
    <string name="equally">=</string>
    <string name="Result">Result</string>
    <string name="Clear">Clear</string>
    <string name="multiply">*</string>
    <string name="devide">/</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <color name="White">#FFFFFFFF</color>

</resources>