<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget33"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/carbfon" >


<Button
    android:id="@+id/button4"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/button2"
    android:layout_alignTop="@+id/button3"
    android:text="@string/minus" />

<Button
    android:id="@+id/button3"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/button1"
    android:layout_below="@+id/button2"
    android:text="@string/plus" />

<Button
    android:id="@+id/button2"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/widget36"
    android:layout_alignTop="@+id/button1"
    android:text="@string/devide" />

<Button
    android:id="@+id/button1"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_alignRight="@+id/textView1"
    android:layout_below="@+id/btnClr"
    android:text="@string/multiply" />

<Button
    android:id="@+id/btnClr"
    android:layout_width="230dp"
    android:layout_height="wrap_content"
    android:layout_below="@+id/widget36"
    android:layout_centerHorizontal="true"
    android:gravity="center"
    android:text="@string/Clear" />





<TextView
    android:id="@+id/widget36"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/textView1"
    android:layout_toRightOf="@+id/textView2"
    android:hint="@string/Result"
    android:textColor="@color/White"
    android:textSize="@dimen/TextSize"
    android:textStyle="bold" />





<TextView
    android:id="@+id/textView1"
    android:layout_width="49dp"
    android:layout_height="22dp"
    android:layout_below="@+id/widget32"
    android:layout_toLeftOf="@+id/textView2"
    android:text="@string/equally"
    android:textColor="@color/White"
    android:textSize="@dimen/TextSize"
    android:textStyle="bold" />


<EditText
    android:id="@+id/widget32"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/textView2"
    android:gravity="center"
    android:hint="@string/SecondNumber"
    android:inputType="numberDecimal"
    android:textSize="18sp" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/widget34"
    android:layout_centerHorizontal="true"
    android:gravity="center"
    android:text="@string/toDo"
    android:textColor="@color/White"
    android:textSize="@dimen/textSize2"
    android:textStyle="bold" />

<EditText
    android:id="@+id/widget34"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:gravity="center"
    android:hint="@string/FirstNumber"
    android:inputType="numberDecimal"
    android:textSize="18sp" />

</RelativeLayout>
